--- a/wrapper/recommender.ipynb
+++ b/wrapper/recommender.ipynb
@@ -542,13 +542,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_song_uri(song, artist):\n",
     "    track = sp.search(q=f\"remaster%20track:{song}%20artist:{artist}\", type='track', limit=1)['tracks']['items']\n",
-    "    return track[0]['uri']"
+    "    if len(track) > 0:\n",
+    "        return track[0]['uri']\n",
+    "    else:\n",
+    "        return"
    ]
   },
   {
@@ -585,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +605,11 @@
     "        database = database.drop(['cluster'], axis=1, errors='ignore')\n",
     "        database['cluster'] = model.predict(database_scaled_features)\n",
     "\n",
-    "        features = get_cluster_features(get_song_uri(song, artist), client)[cluster_features]\n",
+    "        song_uri = get_song_uri(song, artist)\n",
+    "        if not song_uri:\n",
+    "            print('Song not found on spotify!')\n",
+    "            return\n",
+    "        features = get_cluster_features(song_uri, client)[cluster_features]\n",
     "        scaled = scaler.transform(features)\n",
     "        song_cluster = model.predict(scaled)[0]\n",
     "        rec = recommend_song_from_cluster(database, song_cluster)\n",
@@ -643,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,17 +659,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your song was: da da da by trio\n",
-      "You have a nice taste in music, check out this one:\n",
-      "Angel Baby by Troye Sivan\n",
-      "No preview URL\n"
+      "Your song was: s by s\n",
+      "Song not found on spotify!\n"
      ]
     }
    ],
