--- a/wrapper/viewer.ipynb
+++ b/wrapper/viewer.ipynb
@@ -1169,8 +1169,8 @@
     "import itertools\n",
     "import random\n",
     "\n",
-    "perms = list(itertools.permutations(nums.columns, 3))\n",
-    "random.shuffle(perms)"
+    "combs = list(itertools.combinations(nums.columns, 3))\n",
+    "random.shuffle(combs)"
    ]
   },
   {
@@ -1201,8 +1201,8 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "randy = random.randint(0,len(perms)-1)\n",
-    "plot_3_features(all, perms[randy], pred_kmeans_pca, 2000)"
+    "randy = random.randint(0,len(combs)-1)\n",
+    "plot_3_features(all, combs[randy], pred_kmeans_pca, 2000)"
    ]
   },
   {
@@ -1223,8 +1223,8 @@
     "\n",
     "%matplotlib qt\n",
     "\n",
-    "randy = random.randint(0,len(perms)-1)\n",
-    "plot_3_features(all, perms[randy], pred_kmeans_pca, 2000)"
+    "randy = random.randint(0,len(combs)-1)\n",
+    "plot_3_features(all, combs[randy], pred_kmeans_pca, 2000)"
    ]
   }
  ],
@@ -1244,7 +1244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
