client parameter at get_song_uri()

--- a/wrapper/recommender.ipynb
+++ b/wrapper/recommender.ipynb
@@ -546,8 +546,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_song_uri(song, artist):\n",
-    "    track = sp.search(q=f\"remaster%20track:{song}%20artist:{artist}\", type='track', limit=1)['tracks']['items']\n",
+    "def get_song_uri(song, artist, spotifyclient:spotipy.Spotify):\n",
+    "    track = spotifyclient.search(q=f\"remaster%20track:{song}%20artist:{artist}\", type='track', limit=1)['tracks']['items']\n",
     "    if len(track) > 0:\n",
     "        return track[0]['uri']\n",
     "    else:\n",
@@ -605,7 +605,7 @@
     "        database = database.drop(['cluster'], axis=1, errors='ignore')\n",
     "        database['cluster'] = model.predict(database_scaled_features)\n",
     "\n",
-    "        song_uri = get_song_uri(song, artist)\n",
+    "        song_uri = get_song_uri(song, artist, client)\n",
     "        if not song_uri:\n",
     "            print('Song not found on spotify!')\n",
     "            return\n",
